fix: improved text/background contrast for WCAG 2.1 compliance

--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -8,7 +8,7 @@
    --HOVER-background-color: #dcdcdc;
    --primary-text-color: #121212;
    --secondary-text-color: #3D3D3D;
-   --third-text-color: #A6A6A6;
+   --third-text-color: #6b6b6b;
    --fourth-text-color: #F5F5F5;
    --primary-border-color: #A6A6A6;
 
@@ -18,7 +18,7 @@
       --HOVER-background-color: #202020;
       --primary-text-color: #F5F5F5;
       --secondary-text-color: #A6A6A6;
-      --third-text-color: #3D3D3D;
+      --third-text-color: #808080;
       --fourth-text-color: #121212;  
       --primary-border-color: #3D3D3D;
    }
